open metro api